[package]
name = "mos6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.51"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1"
