[package]
name = "mos6502"
version = "0.1.0"
edition = "2021"
authors = ["David Isaksson <davidisaksson93@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.8", features = ["derive"] }
crossterm = "0.27.0"
lazy_static = "1.5.0"
ratatui = "0.27"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.51"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1"
