[package]
name = "mos6502"
version = "0.1.0"
edition = "2021"
authors = ["David Isaksson <davidisaksson93@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
lazy_static = "1.5"
ratatui = "0.27"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1"
